<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FileStorageActivity"
    android:orientation="vertical">
    <EditText
        android:id="@+id/et_input"
        android:layout_width="match_parent"
        android:layout_marginEnd="@dimen/dimen_20"
        android:layout_marginTop="@dimen/dimen_40"
        android:layout_marginStart="@dimen/dimen_20"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:ellipsize="end"
        android:maxLength="20"
        android:hint="@string/str_input_hint"
        />
    <Button
        android:id="@+id/btn_write"
        android:layout_width="@dimen/dimen_150"
        android:layout_height="wrap_content"
        android:padding="@dimen/dimen_10"
        android:textSize="@dimen/text_size_18"
        android:layout_marginTop="@dimen/dimen_10"
        android:layout_gravity="center_horizontal"
        android:text="@string/str_file_write"/>
    <Button
        android:id="@+id/btn_read"
        android:layout_width="@dimen/dimen_150"
        android:layout_height="wrap_content"
        android:padding="@dimen/dimen_10"
        android:textSize="@dimen/text_size_18"
        android:layout_marginTop="@dimen/dimen_10"
        android:layout_gravity="center_horizontal"
        android:text="@string/str_file_read"/>

    <Button
        android:id="@+id/btn_filelist"
        android:layout_width="@dimen/dimen_150"
        android:layout_height="wrap_content"
        android:padding="@dimen/dimen_10"
        android:textSize="@dimen/text_size_18"
        android:layout_marginTop="@dimen/dimen_10"
        android:layout_gravity="center_horizontal"
        android:text="@string/str_look_filelist"/>

    <Button
        android:id="@+id/btn_delete"
        android:layout_width="@dimen/dimen_150"
        android:layout_height="wrap_content"
        android:padding="@dimen/dimen_10"
        android:textSize="@dimen/text_size_18"
        android:layout_marginTop="@dimen/dimen_10"
        android:layout_gravity="center_horizontal"
        android:text="@string/str_file_delete"/>

    <Button
        android:id="@+id/btn_create_cache"
        android:layout_width="@dimen/dimen_150"
        android:layout_height="wrap_content"
        android:padding="@dimen/dimen_10"
        android:textSize="@dimen/text_size_18"
        android:layout_marginTop="@dimen/dimen_10"
        android:layout_gravity="center_horizontal"
        android:text="@string/str_create_cache_files"/>
    <Button
        android:id="@+id/btn_delete_cache"
        android:layout_width="@dimen/dimen_150"
        android:layout_height="wrap_content"
        android:padding="@dimen/dimen_10"
        android:textSize="@dimen/text_size_18"
        android:layout_marginTop="@dimen/dimen_10"
        android:layout_gravity="center_horizontal"
        android:text="@string/str_delete_cache_files"/>
    <Button
        android:id="@+id/btn_bitmap"
        android:layout_width="@dimen/dimen_150"
        android:layout_height="wrap_content"
        android:padding="@dimen/dimen_10"
        android:textSize="@dimen/text_size_18"
        android:layout_marginTop="@dimen/dimen_10"
        android:layout_gravity="center_horizontal"
        android:text="保存图片"/>
</LinearLayout>